--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "build": "webpack --progress --mode=production",
+    "deploy": "git subtree push --prefix dist origin gh-pages" 
   },
   "author": "",
   "license": "ISC",
